<resources>
    <string name="app_name">MPE</string>
    <string name="add">Add a picture to start create!</string>
    <string name="cont">Ready to continue?</string>
    <string name="title_activity_desktop">DesktopActivity</string>
    <string name="name_txt">Name</string>
    <string name="accept_txt">Accept</string>
    <string name="_3_text">3</string>
    <string name="imageScalingTxt">Image Scaling</string>

    <string name="button_txt">Button</string>
    <string name="_0_txt">0</string>
    <string name="rand_txt">rand</string>
    <string name="_1_txt">1</string>

    <string name="pic">Picture</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="leave">Changes will not apply. Continue?</string>
    <string name="undo">Are you sure you want to undo the latest changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="info">Information</string>
    <string name="ok">OK, clear!</string>
    <string name="wrongVal">Wrong value. Please, enter another one</string>
    <string name="start_points">Start\nPoints</string>
    <string name="filter">Filter</string>
    <string name="finish_points">Finish\nPoints</string>

    <string name="infoScaling">
        To use the scaling function, values are entered in the range from 0.1 to 3. In other cases, the program will report an incorrect value.
    </string>
    <string name="filtering">Filtering</string>
    <string name="cubeFig">3D Figures</string>
    <string name="effects">Effects</string>
    <string name="turnClock">Clockwise turning</string>
    <string name="turnCounterClock">Counter clockwise turning</string>
    <string name="figChange">Change\nFigure</string>
    <string name="logo">Logotype</string>
    <string name="logopic">Logo Picture</string>
    <string name="repeat">Thanks for using our app!\nRepeat?</string>
    <string name="repBut">Repeat button</string>
    <string name="lnDraw">Line Drawing</string>
    <string name="cleanScr">Clean the screen</string>
    <string name="logoName">Logo name</string>
    <string name="takePic">Take picture from camera</string>
    <string name="picGallery">Download picture from gallery</string>
    <string name="retouching">Retouching</string>
    <string name="segmentation">Segmentation</string>
    <string name="findFaces">Find faces</string>
    <string name="appName">Mobile Photo Editor</string>
    <string name="startPhrase">Just one step and you can start creating great artwork from your photos</string>
    <string name="iconFunc">Function icon</string>
    <string name="unsharp_masking">Unsharp Masking</string>
    <string name="doBut">Do</string>
    <string name="radius">Radius</string>
    <string name="brush_size">Brush\nSize</string>
</resources>
